--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Name       : Wirework
 Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20140208
-
+ello
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -27,7 +27,7 @@ Released   : 20140208
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><a href="#">Wirework</a></h1>
+			<h1><a href="#">Snakebytes</a></h1>
 			<span>By <a href="http://templated.co">TEMPLATED</a></span> </div>
 		<div id="menu">
 			<ul>
