--- a/index1.html
+++ b/index1.html
@@ -27,12 +27,12 @@ ello
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><a href="#">Snakebytes</a></h1>
+			<h1><a href="#">Snakebysstes</a></h1>
 			<span>By <a href="http://templated.co">TEMPLATED</a></span> </div>
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="index1.html" accesskey="2" title="">Our Clients</a></li>
+				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
 				<li><a href="#" accesskey="3" title="">About Us</a></li>
 				<li><a href="#" accesskey="4" title="">Careers</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
