--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ ello
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-				<li><a href="index1.html" accesskey="2" title="">Our Clients</a></li>
-				<li><a href="#" accesskey="3" title="">About Us</a></li>
+				<li><a href="index.html" accesskey="2" title="">Our Work</a></li>
+				<li><a href="#" accesskey="3" title="">Film service</a></li>
 				<li><a href="#" accesskey="4" title="">Careers</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
