--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@ ello
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><a href="#">Snakebytes</a></h1>
-			<span>By <a href="http://templated.co">TEMPLATED</a></span> </div>
+			<h1><a href="#">Snakebyte</a></h1>
+			<span></a></span> </div>
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
 				<li><a href="index.html" accesskey="2" title="">Our Work</a></li>
 				<li><a href="#" accesskey="3" title="">Film service</a></li>
-				<li><a href="#" accesskey="4" title="">Careers</a></li>
+				<li><a href="#" accesskey="4" title="">Gear Rental</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
 		</div>
@@ -43,7 +43,10 @@ ello
 <div id="header-featured"> </div>
 <div id="banner-wrapper">
 	<div id="banner" class="container">
-		<p>This is <strong>Wirework</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+		<!--<p>This is <strong>Wirework</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>-->
+		<p>"Producing Profound,       Impactful Film
+			For You and Your Industry </p>
+		
 	</div>
 </div>
 <div id="wrapper">
