--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ ello
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
 				<li><a href="index.html" accesskey="2" title="">Our Work</a></li>
 				<li><a href="#" accesskey="3" title="">Film service</a></li>
-				<li><a href="#" accesskey="4" title="">Gear Rental</a></li>
+				<li><a href="store.html" accesskey="4" title="">Gear Rental</a></li>
 				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
 			</ul>
 		</div>
