--- a/store.html
+++ b/store.html
@@ -5,6 +5,8 @@
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="styles.css" />
         <script src="store.js" async></script>
+        <script src="https://smtpjs.com/v3/smtp.js">
+        </script>
     </head>
     <body>
         <header class="main-header">
