--- a/store.html
+++ b/store.html
@@ -19,8 +19,16 @@
             </nav>
             <h1 class="band-name band-name-large">SnakeByte</h1>
         </header>
+        <div class="sidenav">
+                <!-- <p>Categories</p> -->
+                <a href="#MUSIC">Music</a>
+                <a href="#MERCH">Merch</a>
+                <a href="#clients">Clients</a>
+                <a href="#contact">Contact</a>
+              </div>
         <section class="container content-section">
-            <h2 class="section-header">MUSIC</h2>
+                <a href="#new"></a>
+            <h2 class="section-header" id = "MUSIC">MUSIC</h2>
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">Album 1</span>
@@ -57,7 +65,7 @@
             </div>
         </section>
         <section class="container content-section">
-            <h2 class="section-header">MERCH</h2>
+            <h2 class="section-header" id = "MERCH" >MERCH</h2>
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">T-Shirt</span>
@@ -105,18 +113,18 @@
             <div class="container main-footer-container">
                 <h3 class="band-name">SnakeByte</h3>
                 <ul class="nav footer-nav">
-                    <li>
+                    <!-- <li>
                         <a href="https://www.youtube.com" target="_blank">
                             <img src="Images/YouTube Logo.png">
                         </a>
-                    </li>
-                    <li>
+                    </li> -->
+                    <!-- <li>
                         <a href="https://www.spotify.com" target="_blank">
                             <img src="Images/Spotify Logo.png">
                         </a>
-                    </li>
+                    </li> -->
                     <li>
-                        <a href="https://www.facebook.com" target="_blank">
+                        <a href="https://www.facebook.com/snakebyteproductions" target="_blank">
                             <img src="Images/Facebook Logo.png">
                         </a>
                     </li>
