finish navigation bar

--- a/store.html
+++ b/store.html
@@ -23,8 +23,8 @@
                 <!-- <p>Categories</p> -->
                 <a href="#MUSIC">Music</a>
                 <a href="#MERCH">Merch</a>
-                <a href="#clients">Clients</a>
-                <a href="#contact">Contact</a>
+                <!-- <a href="#clients">Clients</a>
+                <a href="#contact">Contact</a> -->
               </div>
         <section class="container content-section">
                 <a href="#new"></a>
