--- a/store.html
+++ b/store.html
@@ -26,8 +26,10 @@
                 <!-- <a href="#clients">Clients</a>
                 <a href="#contact">Contact</a> -->
               </div>
+        
+        <script src="data.js"></script>
+
         <section class="container content-section">
-                <a href="#new"></a>
             <h2 class="section-header" id = "MUSIC">MUSIC</h2>
             <div class="shop-items">
                 <div class="shop-item">
@@ -62,6 +64,7 @@
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
                     </div>
                 </div>
+                <!-- <script src ="data.js"></script> -->
             </div>
         </section>
         <section class="container content-section">
@@ -98,7 +101,7 @@
                 <strong class="cart-total-title">Total</strong>
                 <span class="cart-total-price">$0</span>
             </div>
-            
+
             <h3>Please enter your email</h3>
 
 <input style="width:250px;font-size:14pt;" type="text" id="email" value="">
