--- a/index.html
+++ b/index.html
@@ -52,27 +52,40 @@ ello
 <div id="wrapper">
 	<div id="featured-wrapper">
 		<div id="featured" class="container">
-			<div class="column1"> <span class="icon icon-key"></span>
+			<div class="column1"> 
+					<!-- <span class="icon icon-key"></span> -->
+					<img src = "images/truck.webp" height = 200px>
+					
 				<div class="title">
-					<h2>Maecenas lectus sapien</h2>
+					<h2>Film Equipment Rentals</h2>
+				</div>
+				<p>Fully loaded,weather-proof, production-ready vehicles.</p>
+
+				<p>Gear and Vehicle Rentals with technical assistance. </p>
+						
+				<p>		No One to pick up? We'll Drive it to you!  </p>
+			</div>
+			<div class="column2"> 
+				<!-- <span class="icon icon-legal"></span> -->
+				<img src = "images/film.webp" height = 200px>
+				<div class="title">
+					<h2>Production Services</h2>
 				</div>
 				<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
 			</div>
-			<div class="column2"> <span class="icon icon-legal"></span>
+			<div class="column3"> 
+				<!-- <span class="icon icon-unlock"></span> -->
+				<img src = "images/umbrella.webp" height = 200px>
 				<div class="title">
-					<h2>Praesent scelerisque</h2>
+					<h2>Executive & Budgeting</h2>
 				</div>
 				<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
 			</div>
-			<div class="column3"> <span class="icon icon-unlock"></span>
+			<div class="column4">
+				 <!-- <span class="icon icon-wrench"></span> -->
+				<img src = "images/house.webp" height = 200px>
 				<div class="title">
-					<h2>Fusce ultrices fringilla</h2>
-				</div>
-				<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
-			</div>
-			<div class="column4"> <span class="icon icon-wrench"></span>
-				<div class="title">
-					<h2>Etiam posuere augue</h2>
+					<h2>Set Building/Construction</h2>
 				</div>
 				<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
 			</div>
@@ -80,7 +93,7 @@ ello
 	</div>
 	<div id="extra" class="container">
 		<h2>Maecenas vitae orci vitae tellus feugiat eleifend</h2>
-		<span>Quisque dictum integer nisl risus, sagittis convallis, rutrum id, congue, and nibh</span> <a href="#" class="button">Etiam posuere</a> </div>
+		<span>Quisque dictum integer nisl risus, sagittis convallis, rutrum id, congue, and nibh</span> <a href="#" class="button">Start Renting now</a> </div>
 </div>
 	<div id="footer-wrapper">
 		<div id="footer" class="container">
