--- a/store.html
+++ b/store.html
@@ -12,7 +12,7 @@
         <header class="main-header">
             <nav class="main-nav nav">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="index.html">HOMEPAGE</a></li>
                     <li><a href="store.html">STORE</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
@@ -23,8 +23,8 @@
                 <!-- <p>Categories</p> -->
                 <a href="#MUSIC">Music</a>
                 <a href="#MERCH">Merch</a>
-                <!-- <a href="#clients">Clients</a>
-                <a href="#contact">Contact</a> -->
+                <a href="#CART">Cart</a>
+                <a href="#contact">Contact</a>
               </div>
         
         <script src="data.js"></script>
@@ -89,7 +89,7 @@
             </div>
         </section>
         <section class="container content-section">
-            <h2 class="section-header">CART</h2>
+            <h2 class="section-header" id = "CART">CART</h2>
             <div class="cart-row">
                 <span class="cart-item cart-header cart-column">ITEM</span>
                 <span class="cart-price cart-header cart-column">PRICE</span>
