--- a/about.html
+++ b/about.html
@@ -14,19 +14,22 @@
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
-            <h1 class="band-name band-name-large">The Generics</h1>
+            <h1 class="band-name band-name-large">Snakebyte</h1>
         </header>
 
         <section class="content-section container">
             <h2 class="section-header">ABOUT</h2>
             <img class="about-band-image" src="Images/Band Members.png">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolorum nulla accusantium perferendis quam explicabo odit quisquam ea natus? Saepe ducimus, minima error alias dolorum consectetur officia architecto voluptatem iure sunt eveniet nam, recusandae explicabo, itaque vel autem. Accusamus suscipit sit labore sed blanditiis a est rem harum expedita veritatis numquam voluptatibus dolore voluptatum sunt repellendus explicabo, excepturi beatae perferendis. Numquam dicta quis ipsum explicabo suscipit alias placeat, ea, vero minus ducimus voluptatibus iste repellendus deleniti? Eos, quas! Voluptatem tempora explicabo, corrupti dolor hic iure quo, ipsum voluptates quaerat omnis accusamus et vel, necessitatibus doloribus optio. Odio nobis ad molestias.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio qui consequuntur aut. Nobis debitis ipsum soluta sit itaque officiis impedit maiores suscipit magni id harum consequuntur quas delectus culpa, saepe nostrum, autem ullam! Assumenda molestiae reprehenderit sunt ducimus id saepe porro vitae asperiores eum accusantium? Illum aliquid excepturi magni quos.</p>
+            <p>At Snakebyte Productions in Los Angeles, California, we take your film production seriously. When you choose us, you work with more than 100 passionate people and five affiliate companies, with hundreds of film making credits between them.
+
+                    "We believe that stories cannot be told with words alone. Our Motion pictures take those words and bring them to an imagery that stands for a lifetime."</p>
+            <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio qui consequuntur aut. Nobis debitis ipsum soluta sit itaque officiis impedit maiores suscipit magni id harum consequuntur quas delectus culpa, saepe nostrum, autem ullam! Assumenda molestiae reprehenderit sunt ducimus id saepe porro vitae asperiores eum accusantium? Illum aliquid excepturi magni quos.</p> -->
+                <p>Based in Southern California, we feel that this work is what we are called to do. We are always on time, proactively efficient on set, never missing a scheduled shot. We are respectful and courteous to all of our actors and working partners, creating an enjoyable atmosphere on any set, under any type of deadlines or circumstances. We have the logistical skill contingencies and assets to film in the desert heat, snow and wind, or in the studio.</p>
         </section>
         
         <footer class="main-footer">
             <div class="container main-footer-container">
-                <h3 class="band-name">The Generics</h3>
+                <h3 class="band-name">Snakebyte</h3>
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
