--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="/__/firebase/7.2.1/firebase-analytics.js"></script>
-
+    <script src="/__/firebase/7.2.1/firebase-firestore.js"></script>
+    <script src="/__/firebase/7.2.1/firebase-storage.js"></script>
+    <script>var database = firebase.database();</script>
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
     </body>
