--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
         </script>
     </head>
     <body>
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-database.js"></script>
+
+
         <!-- <header class="main-header">
             <nav class="main-nav nav">
                 <ul>
@@ -20,6 +32,8 @@
             <h1 class="band-name band-name-large">SnakeByte</h1>
             <img src="images/Snakebyte Logo and banner.jpg">
         </header> -->
+
+        <!-- Dragon Banner -->
         <img src="images/Logo_edited.png" height="200" width="400" class = banner >
         <div class="sidenav">
                 <!-- <p>Categories</p> -->
@@ -136,17 +150,5 @@
                 </ul>
             </div>
         </footer>
-        <!-- Firebase hosting -->
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/7.2.1/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-        https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="/__/firebase/7.2.1/firebase-analytics.js"></script>
-    <script src="/__/firebase/7.2.1/firebase-firestore.js"></script>
-    <script src="/__/firebase/7.2.1/firebase-storage.js"></script>
-    <script>var database = firebase.database();</script>
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
     </body>
 </html>
