--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="#contact">Contact</a>
               </div>
         
-        <!-- <script src="data.js"></script> -->
+        <script src="data.js"></script>
         <section class="container content-section" id = "test">
             <h2 class="section-header" id = "MUSIC">MUSIC</h2>
             <div class="shop-items">
@@ -63,27 +63,6 @@
                         <button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
                     </div>
                 </div>
-
-                <script> var cac = document.createElement("div")
-                cac.insertAdjacentHTML('afterend', `                <div class="shop-item" id = "cac">
-                        <span class="shop-item-title">Album 22</span>
-                        <img class="shop-item-image" src="Images/Album 2.png">
-                        <div class="shop-item-details">
-                            <span class="shop-item-price">$14.99</span>
-                            <button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
-                        </div>
-                    </div>`)
-                    text = `<div class="shop-item" id = "cac">
-                        <span class="shop-item-title">Album 22</span>
-                        <img class="shop-item-image" src="Images/Album 2.png">
-                        <div class="shop-item-details">
-                            <span class="shop-item-price">$14.99</span>
-                            <button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
-                        </div>
-                    </div>`
-                    cac.innerHTML = text
-                    document.body.insertBefore(cac, document.getElementById("cacafter"))
-                </script>
                 
                 <div class="shop-item" id = "cacafter">
                     <span class="shop-item-title">Album 3</span>
